# reversi

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  README.md  Rakefile  appveyor.yml  main.js  package.json  reversi.h
cmake/: compiler.cmake  platform.cmake
src/: main.cpp
test/: index.js
